# StealthAmnezia

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: deploy.yml
client/: CMakeLists.txt  amnezia_application.cpp  amnezia_application.h  main.cpp  resources.qrc  settings.cpp  settings.h  vpnconnection.cpp  vpnconnection.h
client/android/: AndroidManifest.xml
client/cmake/: 3rdparty.cmake  android.cmake  ios.cmake  macos.cmake  macos_ne.cmake  sources.cmake
client/configurators/: openvpn_configurator.cpp  wireguard_configurator.cpp
client/containers/: containers_defs.cpp  containers_defs.h
client/core/: defs.h  errorstrings.cpp  hybrid_connection_manager.cpp  hybrid_connection_manager.h  ipcclient.cpp  ipcclient.h  networkUtilities.cpp  osSignalHandler.cpp  scripts_registry.cpp
client/daemon/: daemon.cpp  interfaceconfig.cpp  interfaceconfig.h
client/mozilla/: localsocketcontroller.cpp  networkwatcher.cpp
client/protocols/: awgprotocol.cpp  cps_generator.cpp  cps_generator.h  hybridprotocol.cpp  hybridprotocol.h  ikev2_vpn_protocol_windows.cpp  openvpnprotocol.cpp  protocols_defs.cpp  protocols_defs.h  qml_register_protocols.h  vpnprotocol.cpp  wireguardprotocol.cpp  xrayprotocol.cpp  xrayprotocol.h
client/translations/: amneziavpn_ru_RU.ts  amneziavpn_zh_CN.ts
client/ui/: systemtray_notificationhandler.cpp
common/logger/: logger.cpp
deploy/: build_macos.sh  build_windows.bat  deploy_s3.sh
deploy/stealth/: docker-compose.yml
ipc/: ipc.h  ipc_interface.rep  ipcserver.cpp  ipcserver.h  ipctun2socksprocess.cpp
service/server/: xray.h  (+12 more)
(+111 files in other folders)
